# mlops-pipeline-starter

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  ENHANCED_SCOPE.md  Makefile  PROJECT_STRUCTURE.md  README.md  README.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data_quality/: __init__.py  great_expectations.yml
data_quality/validators/: __init__.py  base_validator.py
infrastructure/terraform/: main.tf  variables.tf
